--- a/debian/ferm-nftables.service
+++ b/debian/ferm-nftables.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=ferm-nftables firewall configuration
+Description=ferm firewall configuration
 After=network-pre.target
 Before=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/ferm-nftables /etc/ferm/ferm.conf
+ExecStart=/usr/bin/ferm /etc/ferm/ferm.conf
 ExecStop=/usr/sbin/iptables -F; /usr/sbin/iptables -t nat -F; /usr/sbin/iptables -t mangle -F; /usr/sbin/ip6tables -F; /usr/sbin/ip6tables -t nat -F; /usr/sbin/ip6tables -t mangle -F
 RemainAfterExit=yes
 StandardOutput=journal
