--- a/debian/rules
+++ b/debian/rules
@@ -4,5 +4,5 @@
 	dh $@ --with python3
 
 override_dh_install:
-	dh_install ferm-nftables.py usr/bin/ferm-nftables
-	dh_install debian/ferm-nftables.1 usr/share/man/man1/
+	dh_install ferm-nftables.service etc/systemd/system/
+	dh_install debian/ferm.1 usr/share/man/man1/
