--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: python3, python3-setuptools
 Standards-Version: 4.6.2
 Vcs-Git: https://github.com/example/ferm-nftables.git
 
-Package: ferm
+Package: ferm-nftables
 Architecture: all
 Depends: ${misc:Depends}, ${python3:Depends}, iptables, nftables
 Conflicts: ferm
