Fix nftables output format
- Use proper nftables script format with hooks and priorities
- Only create base chains (input/output/forward) with hooks
- Skip empty non-base chains
- Update tests for new format

--- a/debian/ferm.conf
+++ b/debian/ferm.conf
@@ -15,7 +15,7 @@ table filter {
         interface lo ACCEPT;
 
         # respond to ping
-        proto icmp ACCEPT;
+        proto icmp icmp-type echo-request ACCEPT;
 
         # allow SSH (consider restricting to specific IPs)
         proto tcp dport ssh ACCEPT;
